--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,12 +1,19 @@
 .Login{
     margin: 0 auto;
-    margin-top: 70px;
+    margin-top: 6rem;
     max-width: 400px;
     padding: 40px 40px;
     background: #fff;
     outline: 0.89px solid rgb(0,33,66);
+    text-align: center;
+    
+    
+}
+.Login:hover{
+    box-shadow: 5px 10px 20px 1px rgb(0,0,0,0.253)!important;
 }
     
+
 /*.App{
     border-top: solid 90px blue;
     (0, 33, 66)
