--- a/src/components/signup/signupstyle.css
+++ b/src/components/signup/signupstyle.css
@@ -5,12 +5,12 @@
   max-width: 400px;
   padding: 40px 40px;
   background: #fff;
-  outline: 0.89px solid rgb(0,33,66);
+  border: 5px solid rgb(2,59,117);
   text-align: center;
-  
+  border-radius: 5px;  
 }
 
-.Signup:hover{
+/*.Signup:hover{
   box-shadow: 5px 10px 20px 1px rgb(0,0,0,0.253)!important;
-}
+}*/
   
